--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : " nodemon ./src/index.js"
+    "dev": " nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "express-handlebars": "^3.0.0",
     "fs-extra": "^7.0.1",
     "md5": "^2.2.1",
+    "moment": "^2.23.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.1"
